@@ -256,6 +256,21 @@
 </ul>
 
 
+<!-- ######################################################################### -->
+<a name="pix"></a>
+<h2>Changes in support for Cisco ASA (PIX, FWSM)</h2>
+
+<ul>
+
+  <li>
+    <p>
+      see #2656 "Generated Cisco ASA access-list has duplicate entry".
+      Under certain circumstances policy compiler fwb_pix generated duplicate
+      access-list lines.
+    </p>
+  </li>
+</ul>
+
 
 <!-- ######################################################################### -->
 <a name="other"></a>
